welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:8: error: ')' expected but 'else' found.
         } else if (a<=b) {
           ^max1020:10: error: ';' expected but 'else' found.
                } else return a
                  ^max1020:12: error: Unmatched closing brace '}' ignored here
 }
 ^